# memstore

./: CMakeLists.txt  README.md
include/: persist.h  store.h  test.h  utils.h
src/: main.c  persist.c  store.c  test.c  utils.c
